--- a/style/base.css
+++ b/style/base.css
@@ -18,77 +18,37 @@ body {
 }
 
 
-#app-navigation {
-    position: fixed;
-    height: 40px;
-    width: 100%;
-    z-index: 500;
-    background-color: #fff;
-    border-bottom: 1px solid #cacaca;
-}
-.navigation-inner {
-
-}
-.navigation-inner-list {
-    display: inline-flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-.navigation-inner-list-element {
-    margin: 5px;
-    padding: 5px 10px;
-}
-
-
-#app-menu {
-    width: 60px;
-    height: 100%;
-    position: fixed;
-    left: 0;
-    /*top: 41px;*/
-    background-color: #3C4661;
-    color: #fff;
-    z-index: 500;
-}
-.app-menu-inner {
-
-}
-.app-menu-inner-list {
-    margin: 0;
-    padding: 0;
-}
-.app-menu-inner-list-element {
-    text-align: center;
-    padding: 20px 0;
-    cursor: default;
-}
-.active {
-    background-color: #fff;
-    color: #000;
-}
-
 
 #app-container {
-    height: 100%;
-    width: 100%;
-    /*top: 41px;*/
-    left: 60px;
-    position: absolute;
-    /*overflow: auto;
+    display: flex;
+    flex-direction: column;
+}
+#app-container-top {
+    height: 50px;
+    border-bottom: 1px solid #cacaca;
+}
+#app-container-main {
+    display: flex;
+    flex-direction: row;
+}
+#app-container-dialogs {
+    /*height: 100%;*/
     border-right: 1px solid #cacaca;
-    overflow-x: hidden;*/
-    display: -webkit-inline-box;
+    width: 300px;
+    overflow: auto;
+    overflow-x: hidden;
+}
+#app-container-main-messages {
 }
 
-#app-container-dialogs {
+/*#app-container-dialogs {
     width: 300px;
     position: relative;
     overflow: auto;
     overflow-x: hidden;
     border-right: 1px solid #cacaca;
     height: 100%;
-}
+}*/
 .app-container-inner {
 
 }
@@ -101,6 +61,9 @@ body {
     padding-left: 5px;
     height: 58px;
     cursor: default;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 .list-element:hover {
     background-color: #3C4661;
@@ -140,25 +103,31 @@ body {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .dialogs-list-element-info {
-    padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .dialogs-list-element-info-head {
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 .dialogs-list-element-info-head-name {
-    padding: 5px 0 0 0;
+    padding: 0 0 0 10px;
+
 }
 .dialogs-list-element-info-head-date {
-    position: absolute;
     font-size: x-small;
-    right: 10px;
-    padding-top: 5px;
 }
 .dialogs-list-element-info-head-body {
-    padding: 5px 0;
+    /*padding: 5px 0;*/
+    display: flex;
+    align-items: center;
 }
 
 
